Proj1/src/infer-out/report.txt
#0
main.c:16: error: Dead Store
  The value written to &file (type _IO_FILE*) is never used.
  14.             strtok(thisEnv, delim);
  15.             char *filename = strtok(NULL, delim);
  16.             file = fopen(filename, "w");
                  ^
  17.             return true;
  18.         }

#1
main.c:16: error: Resource Leak
  resource of type `_IO_FILE` acquired by call to `fopen()` at line 16, column 20 is not released after line 16, column 13.
  14.             strtok(thisEnv, delim);
  15.             char *filename = strtok(NULL, delim);
  16.             file = fopen(filename, "w");
                  ^
  17.             return true;
  18.         }

#2
main.c:63: error: Resource Leak
  resource acquired by call to `opendir()` at line 31, column 27 is not released after line 63, column 13.
  61.             printf(" %s\n", dirEntry->d_name);
  62.         }
  63.         if (dirEntry != NULL) {
                  ^
  64.             closedir(dirEntry);
  65.             free(dirEntry);

Found 3 issues
    Issue Type(ISSUED_TYPE_ID): #
  Resource Leak(RESOURCE_LEAK): 2
        Dead Store(DEAD_STORE): 1
